--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,4 @@
-/* @import-normalize; */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap'); */
+@import-normalize;
 
 body {
   margin: 0;
