--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-Light'), url('src/fonts/Poppins-Light.ttf') format('truetype');
+  src: local('Poppins-Light'), url('src/assets/fonts/Poppins-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
