--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,47 +1,54 @@
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-Light'), url('assets/fonts/Poppins-Light.ttf') format('truetype');
+  src: local('Poppins-Light'), url('/fonts/Poppins-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-Regular'), url('assets/fonts/Poppins-Regular.ttf') format('truetype');
+  src: local('Poppins-Regular'), url('/fonts/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-Medium'), url('assets/fonts/Poppins-Medium.ttf') format('truetype');
+  src: local('Poppins-Medium'), url('/fonts/Poppins-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-SemiBold'), url('assets/fonts/Poppins-SemiBold.ttf') format('truetype');
+  src: local('Poppins-SemiBold'), url('/fonts/Poppins-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: fallback;
 }
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-Bold'), url('assets/fonts/Poppins-Bold.ttf') format('truetype');
+  src: local('Poppins-Bold'), url('/fonts/Poppins-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: local('Poppins-ExtraBold'), url('assets/fonts/Poppins-ExtraBold.ttf') format('truetype');
+  src: local('Poppins-ExtraBold'), url('/fonts/Poppins-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
+  font-display: fallback;
 }
 
 @font-face {
   font-family: 'Alata';
-  src: local('Alata-Regular'), url('assets/fonts/Alata-Regular.ttf') format('truetype');
+  src: local('Alata-Regular'), url('/fonts/Alata-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: fallback;
 }
